update messages handlers
