# backend/internal/models/messages.go
@@ -27,3 +27,7 @@ func (dbMessage *MessageDB) ToWeb() *schemas.Message {
 		CreatedAt: dbMessage.CreatedAt,
 	}
 }
+
+type MessagesDB struct {
+	Messages []MessageDB
+}
